# nvim-rs

./: Cargo.toml
src/: lib.rs  neovim.rs  neovim_api.rs  neovim_api_manual.rs
src/exttypes/: buffer.rs  tabpage.rs  window.rs
src/rpc/: model.rs
xtask/: Cargo.toml
xtask/src/: api.rs  codegen.rs  main.rs  syn_helpers.rs  utils.rs
xtask/src/api/: de.rs
