[package]
name = "xtask"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
getset = "0.1.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
regex = "1.4.3"
rmp-serde = "0.15.4"
serde = { version = "1.0.123", features = ["derive"] }
syn = { version = "1.0.60", features = ["extra-traits", "fold"] }
xshell = "0.1.8"
